server/static/css/style.css
/*=========================================================================================================
  Shared assets
  ========================================================================================================= */

nav {
  background-color: #333;
  height: 70px;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  width:100%;
  color: white;
  margin: 0 0px;
  z-index: 1;
  }
  
  nav ul {
  list-style: none;
  display: flex;
  align-items: center;
  }
  
  nav li {
  margin: 0 10px 0 0;
  border-right: 1px solid white;
  padding-right: 10px;
  margin-left: auto;
  }
  
  nav li:last-child {
  border-right: none;
  padding-right: 0;
  }
  
  nav a {
  color: white;
  text-decoration: none;
  font-size: 18px;
  font-weight: bold;
  }
  
  nav a:hover {
  text-decoration: underline;
  }

  body {
    background-image: url("/static/img/zombie_background.png");
    background-repeat: no-repeat;
    background-size: cover;
  }


  footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width:100%;
    height: 30px;
    background-color: #333;
    display: flex;
    justify-content: center;
    color: white;
    margin: 0 0px;
  }

  footer ul {
    list-style: none;
    display: flex;
    align-items: center;
  }
  
  footer li {
    margin: 0 10px;
  }
  
  footer a {
    color: white;
    text-decoration: none;
    font-size: 18px;
    font-weight: bold;
  }
  
  footer a:hover {
    text-decoration: underline;
  }

  .container {
    height: 100vh;
  }

  .content {
    margin-top: 100px !important;
    width: 50%;
    height: 90%;
    color: black;
    background-color: #615f5f;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: auto;
    border-radius: 20px;
  }
  
  .content h1, h2 {
    margin-left: 12px;
  }

  .author {
    font-weight: bold;
    font-size: 18px;
    margin: 0 10px;
  }

  .author-container {
    list-style: none;
    display: inline-block;
  }

  .main-page {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    margin-left: 310px;
    margin-top: 11px;
  }

  .logged-user {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    margin-left: 5px;
    margin-top: 25px;
  }

  #logout-button {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    margin-left: 150px;
    margin-top: 35px;
    width: 90px;
  }

  #user-profile {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    margin-left: 150px;
    margin-top: 10px;
    width: 90px;
  }

  #sign-up-button {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 2;
    width: 10%;
    height: 4%;
    margin-top: 2px;
    margin-right: 150px;
  }

  #login-button {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 2;
    width: 10%;
    height: 4%;
    margin-top: 36px;
    margin-right: 150px;
  } 

  #sign-up-button, #login-button, #logout-button, #user-profile {
    border-radius: 10px;
    background-color: #9c9494;
  }

  /*========================================================================================================= 
    Contact us elements 
  =========================================================================================================*/

  .notification-form {
    color: black;
    margin-left: 0px;

  }

  #notification-content {
    width: 135%;
    height: 150px;

  }

  
  
  label[for="notification-content"], #notification-content {
    margin-right: -3  50px;
  }


  /*========================================================================================================= 
  Gallery elements
  =========================================================================================================*/

  .gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    grid-gap: 10px;
  }
  
  .gallery a {
    display: block;
    border: 2px solid #333;
    margin: 0;
    padding: 0;
  }
  
  .gallery img {
    display: block;
    width: 100%;
    height: auto;
  }

/*========================================================================================================= 
  Highestscores elements 
  =========================================================================================================*/

.table-container {
  width: 80%;
  margin: auto;
}

.scores-table {
  border-collapse: collapse;
  width: 100%;
  font-size: 18px;
  color: #333;
}

.scores-table th,
td {
  text-align: left;
  padding: 10px;
}

.scores-table thead {
  background-color: #eee;
}

.scores-table tr:nth-child(even) {
  background-color: #f2f2f2;
}

.scores-table tr:nth-child(odd) {
  background-color: #817b7b;
}

.scores-table tr:hover {
  background-color: #ddd;
}

.scores-table th {
  background-color: #333;
  color: white;
}

/*===========================================================================================================
Account
============================================================================================================*/

.premium-points, .coins, .topscore {
  color: black;
  font-size: 30px;
  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.premium-points {
  position: absolute;
  margin-right: 465px;
  margin-bottom: 520px;
}

.coins {
  position: absolute;
  margin-right: 30px;
  margin-bottom: 520px;
}

.topscore {
  position: absolute;
  margin-left: 460px;
  margin-bottom: 520px;
}

.interface {
  border: 1px solid black;
  padding: 10px;
  margin-top: -20px;
  margin-bottom: 0px;
}

.account-menu {
  height: 100%;
}

.account-menu-table {
  border-collapse: collapse;
  height: 10px;
  width: 100%;
  font-size: 18px;
  color: #333;
  margin-bottom: 400px;
  margin-top: 60px;
}

.account-menu-table th,
td {
  text-align: left;
  padding: 10px;
}

.account-menu-table thead {
  background-color: #eee;
}

.account-menu-table tr:nth-child(even) {
  background-color: #f2f2f2;
}

.account-menu-table tr:nth-child(odd) {
  background-color: #817b7b;
}

.account-menu-table td:hover {
  background-color: #ddd;
}

.account-menu-table th {
  background-color: #333;
  color: white;
}

#account-settings-interface,
#game-settings-interface,
#premium-purchase-interface,
#recruit-friend-interface {
  position: absolute;
  margin-bottom: 400px;
}

